@@ -1,10 +1,10 @@
 import java.io.File;
-import java.util.Arrays;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Scanner;
+import java.util.*;
 
 public class Main {
+    private static String currentDir = System.getProperty("user.dir");
+    private static final Set<String> builtinCommands = Set.of("echo", "type", "exit", "pwd", "cd");
+
     public static void main(String[] args) throws Exception {
         boolean exit = false;
         Scanner scanner = new Scanner(System.in);
@@ -22,11 +22,14 @@ public class Main {
                 case "exit" -> exit = true;
                 case "echo" -> System.out.println(result);
                 case "type" -> System.out.println(type(result));
-                case "pwd" -> System.out.println(System.getProperty("user.dir"));
+                case "pwd" -> System.out.println(currentDir);
+                // TODO error if only cd
                 case "cd" -> cd(words[1]);
                 default -> {
                     if (getFile(System.getenv("PATH").split(":"), command).isPresent()) {
-                        Process process = Runtime.getRuntime().exec(input.split(" "));
+                        Process process = new ProcessBuilder(input.split(" "))
+                                .directory(new File(currentDir))
+                                .start();
                         process.getInputStream().transferTo(System.out);
                     } else {
                         System.out.println(input + ": command not found");
@@ -36,17 +39,17 @@ public class Main {
         }
         scanner.close();
     }
-    public static void cd(String directory){
-        File target = new File(directory);
-        if (target.isDirectory())
-            System.setProperty("user.dir", target.getPath());
-        else System.out.println("cd: "+ directory+": No such file or directory");
-
+    public static void cd(String directory) throws java.io.IOException {
+        File target = new File(currentDir, directory);
+        if (target.isDirectory()) {
+            currentDir = target.getCanonicalPath();
+        } else {
+            System.out.println("cd: " + directory + ": No such file or directory");
+        }
     }
 
     public static String type(String command){
-       String[] commands = {"exit","echo","type","pwd","cd"};
-       for(String text:commands){
+       for(String text:builtinCommands){
             if(Objects.equals(text,command))
                 return command+" is a shell builtin";
        }
